<?xml version="1.0" encoding="utf-8"?>

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="hintview_activity">HintView</string>
    <string name="dark_mode">Night Mode</string>
    <string name="open_file">Open Document…</string>
    <string name="home_page">To home page</string>
    <string name="scale_one">Zoom to 100%</string>
    <string name="search">Search</string>
    <string name="hint_version">HINT Version 2.1</string>
    <string name="viewer_version">Viewer Version 2.1.1</string>
    <string name="about">About &#8230;</string>
    <string name="hint_icon">HINT Icon</string>
    <string name="privacy"><a href="http://hint.userweb.mwn.de/hint/privacy.html">Data protection declaration</a></string>
</resources>

