<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fileChooser"
        android:title="@string/open_file" />
    <item
        android:id="@+id/toHome"
        android:title="@string/home_page" />
    <item
        android:id="@+id/scaleOne"
        android:title="@string/scale_one" />
    <item
        android:id="@+id/dark"
        android:checkable="true"
        android:title="@string/dark_mode"
        android:visible="true" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="always|collapseActionView"
        android:textColorHint="@color/foreground_color"
        android:title="@string/search" />

</menu>
